@@ -64,6 +64,9 @@ public class KlingonAssistant extends BaseActivity {
   private TextView mTextView;
   private ListView mListView;
 
+  // The query to pre-populate when the user presses the "Search" button.
+  private String mPrepopulatedQuery = null;
+
   // private int mTutorialCounter;
   @Override
   public void onCreate(Bundle savedInstanceState) {
@@ -399,14 +402,10 @@ public class KlingonAssistant extends BaseActivity {
     SharedPreferences sharedPrefs = PreferenceManager.getDefaultSharedPreferences(getBaseContext());
     if (cursor == null || cursor.getCount() == 0) {
       // There are no results.
-      // if (sharedPrefs.getBoolean(
-      //     Preferences.KEY_KLINGON_UI_CHECKBOX_PREFERENCE, /* default */ false)) {
-      //   mTextView.setText(
-      //       Html.fromHtml(getString(R.string.no_results_tlh, new Object[] {entryNameWithPoS})));
-      // } else {
       mTextView.setText(
           Html.fromHtml(getString(R.string.no_results, new Object[] {entryNameWithPoS})));
-      // }
+      // The user probably made a typo, so allow them to edit the query.
+      mPrepopulatedQuery = queryEntry.getEntryName();
 
     } else {
       // Display the number of results.
@@ -424,18 +423,16 @@ public class KlingonAssistant extends BaseActivity {
           // Display, e.g., "Lyrics:".
           countString += ":";
         }
-        // } else if (sharedPrefs.getBoolean(
-        //     Preferences.KEY_KLINGON_UI_CHECKBOX_PREFERENCE, /* default */ false)) {
-        //   countString =
-        //       getResources()
-        //           .getQuantityString(
-        //               R.plurals.search_results_tlh, count, new Object[] {count,
-        // entryNameWithPoS});
       } else {
         countString =
             getResources()
                 .getQuantityString(
                     R.plurals.search_results, count, new Object[] {count, entryNameWithPoS});
+        if (queryEntry.basePartOfSpeechIsUnknown()) {
+          // If the query was not tagged with a part of speech, then allow the use to edit it by
+          // pressing the search button.
+          mPrepopulatedQuery = queryEntry.getEntryName();
+        }
       }
       mTextView.setText(Html.fromHtml(countString));
 
@@ -457,20 +454,9 @@ public class KlingonAssistant extends BaseActivity {
   @Override
   public boolean onSearchRequested() {
     SearchManager searchManager = (SearchManager) getSystemService(Context.SEARCH_SERVICE);
-
     if (searchManager != null) {
-      SharedPreferences sharedPrefs =
-          PreferenceManager.getDefaultSharedPreferences(getBaseContext());
-      // if (sharedPrefs.getBoolean(
-      //     Preferences.KEY_KLINGON_UI_CHECKBOX_PREFERENCE, /* default */ false)) {
-      //   // Use the Klingon UI strings.
       searchManager.startSearch(
-          null, false, new ComponentName(this, KlingonAssistant.class), null, false);
-      // } else {
-      //   // Use the non-Klingon UI strings.
-      //   searchManager.startSearch(
-      //       null, false, new ComponentName(this, KlingonAssistantAlt.class), null, false);
-      // }
+          mPrepopulatedQuery, true, new ComponentName(this, KlingonAssistant.class), null, false);
       return true;
     }
     return false;
